--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ idna==2.9
 oauth2client==1.5.2
 Pillow==7.1.2
 protobuf==3.12.2
-psycopg2==2.8.4
+#psycopg2==2.8.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pytz==2019.3
