--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 cachetools==4.1.0
-certifi==2020.4.5.2
+#certifi==2020.4.5.2
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==2.2
@@ -19,7 +19,7 @@ protobuf==3.12.2
 #psycopg2==2.8.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pytz==2019.3
+#pytz==2019.3
 requests==2.23.0
 rsa==4.6
 six==1.15.0
